--- a/css/white-paper.css
+++ b/css/white-paper.css
@@ -14,10 +14,11 @@
 }
 
 #switchtheme a{
-    display: inline;
+    display: block;
     float:left;
     padding:10px;
     padding-bottom: 0;
+    clear: right;
     
 
 }
