--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ nav ul li a{
 
 
 #right-nav{
-    width: 30%;
+    width: 50%;
     float: right;
     list-style-type:none;
     
@@ -137,6 +137,10 @@ nav ul li a{
     top:50px;
 }
 
+footer{
+    height:100px;
+    width:100%;
+}
 .blogtitle,
 .posttitle{
     text-align:center;
@@ -204,5 +208,9 @@ nav ul li a{
     font-size: 11px;
 }
 
-
-
+/*FULL POST
+============================*/
+#fullpost{
+    visibility:hidden;
+    
+}
