--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,78 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
+body{
+     font-family: 'Montserrat',sans-serif;
+     color: #444;
+     margin:0;
+     background-color:#36465d;
+}
+
+a{
+    text-decoration: none;
+    border-bottom: 1px solid transparent;
+    transition: all ease .5s;
+    color: #333;
+    
+}
+
+a:hover{
+    border-color: #333;
+    
+}
+
+nav{
+
+    position: fixed;
+    top:0;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height:50px;
+    background-color:#36465d;
+    border-bottom: solid 1px #4a586d;
+    /**box-shadow: 0 2px 10px 0 #999; **/
+       z-index: 5;
+   
+}
+
+
+nav ul{
+     list-style-type:none;
+}
+
+
+nav ul li a{
+    display: inline;
+    float: right;
+    padding:0 10px;
+    
+
+}
+
+#addPost{
+    background-color: #529ecc;
+    color:#36465d;
+    height:30px;
+    width:30px;
+    
+}
+
+
+#left-nav{
+    width: 40%;
+     list-style-type:none;
+     float: left;
+    
+}
+
+
+#right-nav{
+    width: 50%;
+    float: right;
+    list-style-type:none;
+    
+}
+
 /*------------------ dropdown theme ------------------- */
 
 
@@ -17,9 +92,10 @@
 
 #switchtheme a{
     display: inline;
-    float:left;
+    float: left;
     padding:10px;
     padding-bottom: 0;
+    text-align: left;
     
 
 }
@@ -35,16 +111,119 @@
     z-index: 1;
 }
 
+
+
+#themeSelect{
+    text-transform: capitalize;
+    display: inline-block;
+}
+
+#themeSelect:hover{
+    color: blue;
+}
+
 #switchtheme:hover #theme-dropdown{
     display: block;
+    text-transform: capitalize;
 }
 
 .selectedTheme{
     color: pink;
 }
 
+
+
 /*--- end dropdown theme --*/
 
-body{
-    background-color: green;
+
+
+.container{
+    position:relative;
+    width:40%;
+    margin: 0 auto;
+    top:50px;
+}
+
+footer{
+    height:100px;
+    width:100%;
+}
+.blogtitle,
+.posttitle{
+    color:#fff;
+    background-color:transparent;
+    text-transform:lowercase;
+    text-align:center;
+    margin-top: 15px;
+}
+
+.post{
+    border: solid 1px #4a586d;
+    border-radius: 5px;
+    margin-bottom:20px;
+    height: 200px;
+    background-color: #fff;
+}
+
+.post p{
+    padding:10px;
+    
+}
+
+.posthead{
+    width:95%;
+    border-bottom: solid 1px #f5dce3;
+    padding-left:5%;
+    background-color:fff;
+    
+}
+
+.delete{
+    float:right;
+}
+
+/*MODAL STUFF
+===============================*/
+
+
+.overlay{
+    visibility: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width:100%;
+    height:100%;
+    text-align:center;
+    z-index: 10;
+    background-color:rgb(15, 15, 15, 0.2);
+}
+
+.modal{
+    width:300px;
+    margin: 100px auto;
+    padding:10px;
+    border: solid 1px #f5dce3;
+    background-color:#fffbfc;
+    border-radius: 15px;
+    text-align:center;
+}
+
+.modal button{
+    appearance: none;
+}
+#inText{
+    height: 100px;
+    width: 250px;
+    
+}
+
+.postdate{
+    font-size: 11px;
+}
+
+/*FULL POST
+============================*/
+#fullpost{
+    visibility:hidden;
+    
 }
